--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -37,11 +37,27 @@
         <div class="col-lg-12 col-md-12 col-xs-12">
           <div class="contents">
             <h2 class="head-title">اثبات وجود مدارک بر پایه بلاک چین</h2>
+            <div class="header-SubTitle">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
           </div>
         </div>
       </div>
       <div class="row">
-
+        <div class="col-md-12">
+          <nb-card>
+            <nb-card-body>
+          
+              <nb-tabset>
+                <nb-tab tabTitle="ثبت جدید">
+                  <p> <strong>ثبت جدید</strong></p>
+                </nb-tab>
+                <nb-tab tabTitle="استعلام">
+                  <p> <strong>استعلام</strong></p>
+                </nb-tab>
+              </nb-tabset>
+          
+            </nb-card-body>
+          </nb-card>
+        </div>
 
       </div>
 
