--- a/src/app/home/components/header/header.component.scss
+++ b/src/app/home/components/header/header.component.scss
@@ -178,8 +178,13 @@
         margin-left: 12px;
       }
       
-      .header-container{
+     .hero-area .header-container{
         padding: 2% 0 0 0;
+      }
+      .header-SubTitle{
+        color: #fff;
+        padding: 0% 18% 5% 18%;;
+        font-size: 21px;
       }
       /* ==========================================================================
        Hero Production version
@@ -368,3 +373,34 @@
     border: 0;
     transition: all .2s ease;
   }
+
+//   
+// // /// // tabs /// /// //
+
+@import '../../../@theme/styles/themes';
+@import '~bootstrap/scss/mixins/breakpoints';
+@import '~@nebular/theme/styles/global/breakpoints';
+
+@include nb-install-component() {
+  nb-tabset {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  nb-tab {
+    padding: nb-theme(padding);
+  }
+
+  /deep/ ngx-tab1, /deep/ ngx-tab2 {
+    display: block;
+    padding: nb-theme(padding);
+  }
+
+  @include media-breakpoint-down(xs) {
+    nb-tabset /deep/ul {
+      font-size: 1rem;
+      padding: 0 0.25rem;
+    }
+  }
+}
