--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -46,9 +46,31 @@
           <nb-card>
             <nb-card-body>
           
-              <nb-tabset>
-                <nb-tab tabTitle="ثبت جدید">
-                  <p> <strong>ثبت جدید</strong></p>
+              <nb-tabset fullWidth>
+                <nb-tab id="tabTitle" tabTitle="ثبت جدید">
+                    <nb-card>
+                        <nb-card-body class="cardBody">
+                          <nb-stepper orientation="horizontal">
+                            <nb-step [label]="labelOne">
+                              <ng-template #labelOne>ثبت محتوا</ng-template>
+                              <file-uploader></file-uploader>
+                              <button nbButton disabled nbStepperNext>قبلی</button>
+                              <button nbButton nbStepperNext>بعدی</button>
+                            </nb-step>
+                            <nb-step [label]="labelTwo">
+                              <ng-template #labelTwo> اطلاعات تکمیلی</ng-template>
+                              <h3>Step content #2</h3>
+                              <button nbButton nbStepperPrevious>قبلی</button>
+                              <button nbButton nbStepperNext>بعدی</button>
+                            </nb-step>
+                            <nb-step label="تایید">
+                              <h3>Step content #3</h3>
+                              <button nbButton nbStepperPrevious>قبلی</button>
+                              <button nbButton disabled nbStepperNext>بعدی</button>
+                            </nb-step>
+                          </nb-stepper>
+                        </nb-card-body>
+                      </nb-card>
                 </nb-tab>
                 <nb-tab tabTitle="استعلام">
                   <p> <strong>استعلام</strong></p>
