--- a/src/app/home/components/uploader/uploader.component.scss
+++ b/src/app/home/components/uploader/uploader.component.scss
@@ -3,9 +3,9 @@
    
   .file-upload {
     background-color: #d0d0d05e;
-    width: 100%;
+    width: 82%;
     padding: 27px;
-    margin: 0% 0 31px 0;
+    margin: 0% 10% 31px 0;
     border-radius: 31px;
 }
   
