--- a/src/app/home/components/uploader/uploader.component.scss
+++ b/src/app/home/components/uploader/uploader.component.scss
@@ -65,6 +65,10 @@
     border: 4px dashed #ffffff;
   }
   
+  .image-title{
+    font-size: 12px;
+    font-family: none;
+  }
   .image-title-wrap {
     padding: 0 15px 15px 15px;
     color: #222;
