bugFix - add first form control
its not working yet

--- a/src/app/home/components/new-record/new-record.component.html
+++ b/src/app/home/components/new-record/new-record.component.html
@@ -6,10 +6,12 @@
         <nb-card>
           <nb-card-body class="cardBody">
             <nb-stepper orientation="horizontal">
-              <nb-step [label]="labelOne" class="steps">
+              <nb-step [label]="labelOne" [stepControl]="firstForm">
                 <ng-template #labelOne>ثبت محتوا</ng-template>
-                
-                <file-uploader ></file-uploader>
+                <form [formGroup]="firstForm">
+                  <input type="text" style="display:none" class="form-control" formControlName="firstCtrl">
+                </form>
+                <file-uploader></file-uploader>
                 <button class="fontFamily" nbButton disabled nbStepperNext>قبلی</button>
                 <button *ngIf="hasFile" class="fontFamily" nbButton nbStepperNext type="submit">بعدی</button>
                 <button *ngIf="!hasFile" class="fontFamily" nbButton nbPopover="ابتدا یک فایل انتخاب کنید">بعدی</button>
