--- a/src/app/home/components/new-record/new-record.component.html
+++ b/src/app/home/components/new-record/new-record.component.html
@@ -1,6 +1,5 @@
 <nb-card>
   <nb-card-body>
-
     <nb-tabset fullWidth>
       <nb-tab id="tabTitle" tabTitle="ثبت جدید">
         <nb-card>
@@ -9,32 +8,64 @@
               <nb-step [label]="labelOne" [stepControl]="firstForm">
                 <ng-template #labelOne>ثبت محتوا</ng-template>
                 <form [formGroup]="firstForm">
-                  <input type="text" style="display:none" class="form-control" formControlName="firstCtrl">
+                  <input
+                    type="text"
+                    style="display:none"
+                    class="form-control"
+                    formControlName="firstCtrl"
+                  />
                 </form>
-                <file-uploader></file-uploader>
-                <button class="fontFamily" nbButton disabled nbStepperNext>قبلی</button>
-                <button *ngIf="hasFile" class="fontFamily" nbButton nbStepperNext type="submit">بعدی</button>
-                <button *ngIf="!hasFile" class="fontFamily" nbButton nbPopover="ابتدا یک فایل انتخاب کنید">بعدی</button>
+
+                <file-uploader
+                  (fileInputChange)="
+                    firstForm.setValue({ firstCtrl: $event?.files?.length })
+                  "
+                ></file-uploader>
+                <button class="fontFamily" nbButton disabled nbStepperNext>
+                  قبلی
+                </button>
+                <button
+                  *ngIf="hasFile"
+                  class="fontFamily"
+                  nbButton
+                  nbStepperNext
+                  type="submit"
+                >
+                  بعدی
+                </button>
+                <button
+                  *ngIf="!hasFile"
+                  class="fontFamily"
+                  nbButton
+                  nbPopover="ابتدا یک فایل انتخاب کنید"
+                >
+                  بعدی
+                </button>
               </nb-step>
               <nb-step [label]="labelTwo">
                 <ng-template #labelTwo> اطلاعات تکمیلی</ng-template>
                 <h3>Step content #2</h3>
-                <button class="fontFamily" nbButton nbStepperPrevious>قبلی</button>
+                <button class="fontFamily" nbButton nbStepperPrevious>
+                  قبلی
+                </button>
                 <button class="fontFamily" nbButton nbStepperNext>بعدی</button>
               </nb-step>
               <nb-step label="تایید">
                 <h3>Step content #3</h3>
-                <button class="fontFamily" nbButton nbStepperPrevious>قبلی</button>
-                <button class="fontFamily" nbButton disabled nbStepperNext>بعدی</button>
+                <button class="fontFamily" nbButton nbStepperPrevious>
+                  قبلی
+                </button>
+                <button class="fontFamily" nbButton disabled nbStepperNext>
+                  بعدی
+                </button>
               </nb-step>
             </nb-stepper>
           </nb-card-body>
         </nb-card>
       </nb-tab>
       <nb-tab tabTitle="استعلام">
-        <p> <strong>استعلام</strong></p>
+        <p><strong>استعلام</strong></p>
       </nb-tab>
     </nb-tabset>
-
   </nb-card-body>
 </nb-card>
