--- a/src/app/home/components/uploader/uploader.component.html
+++ b/src/app/home/components/uploader/uploader.component.html
@@ -1,9 +1,9 @@
-<form [formGroup]="uploaderForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="uploaderForm" >
 <div class="file-upload float-right">
     <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">انتخاب فایل</button>
-
+ 
     <div class="image-upload-wrap">
-      <input formControlName="file" class="file-upload-input" type='file' (change)='validate($event)' onchange="readURL(this);" accept="image/*" />
+      <input formControlName="file" #fileInput class="file-upload-input" type='file' (change)='fileInputChange.emit(fileInput)' onchange="readURL(this);" accept="image/*" />
       <div class="drag-text">
         <h3>فایل خود را اینجا رها کنید</h3>
         <span *ngIf="uploaderForm.get('file').hasError('fileNotFound')">not file</span>
