bugFix - correct file validation button
in Index > New Record
next step button not work correctly with file validation service and in this comit its fixed

--- a/src/app/home/components/new-record/new-record.component.html
+++ b/src/app/home/components/new-record/new-record.component.html
@@ -18,7 +18,8 @@
 
                 <file-uploader
                   (fileInputChange)="
-                    firstForm.setValue({ firstCtrl: $event?.files?.length })
+                    firstForm.setValue({ firstCtrl: $event?.files?.length }) ;
+                    stepCtrlBtn($event)
                   "
                 ></file-uploader>
                 <button class="fontFamily" nbButton disabled nbStepperNext>
