--- a/src/app/home/components/new-record/new-record.component.scss
+++ b/src/app/home/components/new-record/new-record.component.scss
@@ -26,7 +26,9 @@ nb-tabset .tabset{
     font-family: iranSansM;
     padding: 2% 13% 0;
   }
-
+  .cardBody button{
+    margin: 0 1%;
+  }
   popover-border {
     border: 2px solid #fd0000;
   }
