feature- download app section add

--- a/src/app/home/sections/docs-section/docs-section.component.html
+++ b/src/app/home/sections/docs-section/docs-section.component.html
@@ -1,5 +1,5 @@
   <!-- Features Section Start -->
-  <div id="features-two" class="section">
+  <div id="docs" class="section">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-12 col-sm-12">
