--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -25,7 +25,7 @@
             <a class="nav-link page-scroll" href="#app-features">مزایا</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="#screenshots">مراحل</a>
+            <a class="nav-link page-scroll" href="#docs">مقالات</a>
           </li>
 
           <li class="nav-item">
