--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -36,13 +36,13 @@
         <ul class="navbar-nav mr-auto w-100 justify-content-end">
 
           <li class="nav-item">
-              <button nbButton outline status="success" class="btn">
+              <button  (click)='open()' nbButton outline status="success" class="btn">
                 ورود / عضویت
               </button>
           </li>
 
           <li class="nav-item">
-              <a nbButton hero status="primary" href="#home" class="btn page-scroll" >ثبت جدید</a>
+              <button nbButton hero status="primary" href="#home" class="btn page-scroll" >ثبت جدید</button>
           </li>
 
         </ul>
@@ -72,3 +72,25 @@
   </div>
 </header>
 <!-- Header Section End -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
