--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -35,6 +35,6 @@
 .content{
   height: 200vh;
 }
-.nb-theme-corporate nb-layout .layout .layout-container .content .columns nb-layout-column{
-  padding: 0;
+ nb-layout-column{
+  padding: 0!important;
 }
