feature- add phone number input to login

--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -36,7 +36,7 @@
         <ul class="navbar-nav mr-auto w-100 justify-content-end">
 
           <li class="nav-item">
-              <button  (click)='open()' nbButton outline status="success" class="btn">
+              <button  (click)='openLoginDialog()' nbButton outline status="success" class="btn">
                 ورود / عضویت
               </button>
           </li>
