--- a/src/app/home/components/login/login.component.scss
+++ b/src/app/home/components/login/login.component.scss
@@ -1,32 +1,56 @@
-.regLogo{
-    max-width: 200px;
-    display: block;
+.regLogo {
+  max-width: 200px;
+  display: block;
 }
-p{
+p {
+  font-family: iranSansM;
+}
+.loginBody {
+  font-family: iranSansM;
+  transition: 0.5s ease-in-out all;
+}
+.alert {
+  font-family: iranSansM;
+}
+.title {
+  text-align: center;
+  margin: 12px 0;
+  font-size: 19px;
+}
+.subTitle {
+  text-align: center;
+}
+.phoneNum {
+  direction: ltr;
+  display: block;
+}
+.phoneSection {
+  text-align: center;
+  padding: 1% 0 27% 0;
+}
+.sentCodeStep{
+    opacity: 0 !important;
+    transition: 0.5s ease-in-out all;
+}
+.phoneSubmitBtn {
+  padding: 26px 0;
+}
+.show {
+  opacity: 1 !important;
+}
+.hide {
+  opacity: 0 !important;
+  display: none;
+}
+
+.codeInput{
     font-family: iranSansM;
 }
-.loginBody{
+.codeSubmitBtn{
+    margin: 21px 1%;
     font-family: iranSansM;
 }
-.alert{
+button{
+
     font-family: iranSansM;
-}
-.title{
-    text-align: center;
-    margin: 12px 0;
-    font-size: 19px;
-}
-.subTitle{
-    text-align: center;
-}
-.phoneNum{
-    direction: ltr;
-    display: block;
-}
-.phoneSection{
-        text-align: center;
-        padding: 1% 0 27% 0;
-}
-.phoneSubmitBtn{
-    padding: 26px 0;
 }
