--- a/src/app/home/components/login/login.component.html
+++ b/src/app/home/components/login/login.component.html
@@ -1,5 +1,11 @@
 <div class="loginBody " *ngIf="!codeSent">
-  <h2 mat-dialog-title>ورود / عضویت</h2>
+  <div class="header">
+    <button mat-dialog-close type="button" class="btn btn-danger closeBtn">
+
+      <i class="fas fa-times"></i>
+    </button>
+    <p mat-dialog-title>ورود / عضویت</p>
+  </div>
   <mat-dialog-content class="mat-typography">
     <div class="">
       <div class="row">
@@ -14,26 +20,30 @@
         <div class="col phoneSection">
 
           <form #phoneNumForm="ngForm" [formGroup]="phoneForm">
-            <ngx-intl-tel-input class="phoneNum mx-auto" [cssClass]="'custom'" [preferredCountries]="['ir', 'us']"
+            <ngx-intl-tel-input class="phoneNum mx-auto" [cssClass]="'custom'" [onlyCountries]="['ir', 'us','uk']"
               [enablePlaceholder]="true" [enableAutoCountrySelect]="true" name="phone" formControlName="phone">
             </ngx-intl-tel-input>
             <div *ngIf="invalidNum">
               <nb-alert status="danger" class="alert">شماره وارد شده صحیح نمیباشد! دوباره چک کنید</nb-alert>
             </div>
             <div class="col phoneSubmitBtn">
-              <button nbButton hero status="warning" (click)="validateNum()">ارسال رمز</button>
+              <button nbButton hero status="warning" class="codeSubmitBtn" (click)="validateNum()">ارسال رمز</button>
             </div>
           </form>
         </div>
       </div>
     </div>
   </mat-dialog-content>
-  <mat-dialog-actions align="end">
-    <button nbButton size="xsmall" mat-dialog-close>بستن</button>
-  </mat-dialog-actions>
 </div>
 <div class="sentCodeStep" *ngIf="codeSent && !codeSubmited">
-  <h2 mat-dialog-title>تایید شماره موبایل</h2>
+  <div class="header">
+    <button mat-dialog-close type="button" class="btn btn-danger closeBtn">
+
+      <i class="fas fa-times"></i>
+    </button>
+    <p mat-dialog-title>تایید شماره موبایل</p>
+  </div>
+
   <mat-dialog-content class="mat-typography">
     <div class="">
       <div class="row">
@@ -60,12 +70,16 @@
       </div>
     </div>
   </mat-dialog-content>
-  <mat-dialog-actions align="end">
-    <button nbButton size="xsmall" mat-dialog-close>بستن</button>
-  </mat-dialog-actions>
 </div>
 <div class="sentCodeStep" *ngIf="codeSubmited">
-  <h2 mat-dialog-title>ثبت ایمیل</h2>
+    <div class="header">
+        <button mat-dialog-close type="button" class="btn btn-danger closeBtn">
+    
+          <i class="fas fa-times"></i>
+        </button>
+        <p mat-dialog-title>ثبت ایمیل</p>
+      </div>
+
   <mat-dialog-content class="mat-typography">
     <div class="">
       <div class="row">
@@ -73,7 +87,8 @@
           <img class="regLogo mx-auto" src="../../../../assets/img/team/team1.jpg" alt="">
           <p class="title"> ثبت ایمیل
           </p>
-          <p class="subTitle">برای دریافت نتایج ثبت اسناد خود روی بلاک چین و استفاده از آن برای فرایند استعلام ایمیل خود را وارد کنید</p>
+          <p class="subTitle">برای دریافت نتایج ثبت اسناد خود روی بلاک چین و استفاده از آن برای فرایند استعلام ایمیل خود
+            را وارد کنید</p>
         </div>
       </div>
       <div class="row">
@@ -85,7 +100,8 @@
             <div class="col">
               <button type="submit" nbButton hero class="codeSubmitBtn" status="warning"
                 (click)="submiteCode()">ثبت</button>
-                <button nbButton outline class="codeSubmitBtn" mat-dialog-close size="small" status="info">بعدا ثبت میکنم</button>
+              <button nbButton outline class="codeSubmitBtn" mat-dialog-close size="small" status="info">بعدا ثبت
+                میکنم</button>
             </div>
           </form>
         </div>
